Write code for CoffeeShopList screen
add cocoapod libraries - AlamofireObjectMapper, Toast-Swift
develop network module based on Alamofire and Mapper
add location off page
show toast message when network or location failed
add headerview on CoffeeShopList, and develop timer to reload data periodcally
add extension which convert Int to comma separated String

--- a/CoffeeShopFinder/Podfile
+++ b/CoffeeShopFinder/Podfile
@@ -3,4 +3,6 @@ use_frameworks!
 target 'CoffeeShopFinder' do
     pod 'Alamofire'
 	pod 'NVActivityIndicatorView'
+    pod 'AlamofireObjectMapper'
+    pod 'Toast-Swift'
 end
